@@ -3,6 +3,8 @@
 - Added microtime analysis to the string scalar analysis.
 - Added type hint to the additional data for the first
   element.
+- Bugfix: Display info about public properties in predeclared
+  classes.
 
 4.1.2
 - Change: Do not display an empty array, when there are no
